WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
261890
[WebGPU] fragmentWriteGBuffers.wgsl does not compile
https://bugs.webkit.org/show_bug.cgi?id=261890
Summary
[WebGPU] fragmentWriteGBuffers.wgsl does not compile
Mike Wyrzykowski
Reported
2023-09-21 10:33:21 PDT
fragmentWriteGBuffers.wgsl from
https://webgpu.github.io/webgpu-samples/samples/deferredRendering#fragmentWriteGBuffers.wgsl
does not compile because it writes to multiple render targets and the locations are not specified. I.e., in the generated output: struct type0 { vec<float, 4> normal ; vec<float, 4> albedo ; }; should be: struct type0 { vec<float, 4> normal [[color(0)]]; vec<float, 4> albedo [[color(1)]]; };
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-09-21 10:33:38 PDT
<
rdar://problem/115849432
>
Tadeu Zagallo
Comment 2
2023-09-25 08:14:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18159
EWS
Comment 3
2023-09-26 00:23:17 PDT
Committed
268436@main
(255232f837a9): <
https://commits.webkit.org/268436@main
> Reviewed commits have been landed. Closing PR #18159 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug