[WebGPU] fragmentWriteGBuffers.wgsl does not compile https://bugs.webkit.org/show_bug.cgi?id=261890> <radar://115849432>

Reviewed by NOBODY (OOPS!).

When the fragment output has multiple outputs, write
to each render target.

This is partially incorrect as depth output is not supported
and maybe I am missing one or two other things too.

* Source/WebGPU/WGSL/EntryPointRewriter.cpp:
(WGSL::EntryPointRewriter::checkReturnType):
* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::visit):